# BSUIR_OSaSP

./: CMakeLists.txt  color_print.h  keyboard_input.h
LAB_02/: func.c  func.h  main.c
LAB_02/child/: main.c
LAB_1/: main.c  makefile
LAB_2/: envs  func.c  main.c  makefile
LAB_2/child/: main.c
LAB_3/: makefile
LAB_3/src/: protocol.h
LAB_3/src/child/: helper.c  helper.h  main.c
LAB_3/src/parent/: helper.c  helper.h  main.c
LAB_4/src/: consumer.c  init_and_exit.c  ipc.c  main.c  producer.c
LAB_5/src/: consumer.c  init_and_exit.c  ipc.c  ipc.h  main.c  producer.c
LAB_6/src/generator/: main.c
LAB_6/src/printer/: main.c
LAB_6/src/sort_index/: sort_index.c  sort_index.h  thread.c  thread.h  utils.h
LAB_7/p1/src/: main.c
LAB_7/p1/src/consumer/: consumer.c  consumer.h
LAB_7/p1/src/message/: message.c  message.h
LAB_7/p1/src/producer/: producer.c  producer.h
LAB_7/p2/src/: main.c
LAB_8/src/client/: discovery_client.h  main.c
LAB_8/src/protocol/: protocol.h
LAB_8/src/server/: discovery_server.h  main.c
LAB_8/src/server/cmd/: ack.h  cmd.h  command.h  echo.h  fs.h  info.h  invoker.h  parser.h  quit.h
